style fixes for boxes to have default min-widtg and default to fullwidth on small screens

--- a/src/aggregatedTable/aggregatedTable.css
+++ b/src/aggregatedTable/aggregatedTable.css
@@ -225,8 +225,8 @@
 /*Hierarchycal styles*/
 /*coloring for even columns from end of table to compensate for uneven td count because of block headers*/
 .reportal-hierarchy-table>tbody>tr>td[class*=_dc]:nth-last-child(even){background: var(--primary-background-color);}
-.reportal-hierarchy-table tr.firstInBlock>td{
-  border-top:10px #fff solid !important;
+.reportal-hierarchy-table tr.firstInBlock:not(:first-child)>td{
+  border-top:3px var(--divider-color) double !important;
   padding-top:2px !important;
 }
 .reportal-hierarchy-table tr.level0 {
@@ -234,11 +234,11 @@
 }
 .reportal-hierarchy-table tr.firstInBlock>td:first-child {
   /*dirty hack for breakdown first column to stay really narrow*/
-
   white-space: normal;
   background: var(--light-primary-color) ;
   vertical-align: top;
   width:30px;
+  padding:8px !important;
 }
 
 .reportal-hierarchy-table .reportal-hierarchical-header{
